--- a/index.html
+++ b/index.html
@@ -25,9 +25,39 @@
                 <img src="./davlat.webp" alt="metro">
             </div>
         </div>
-        
         <br>
-        <h3>Davlat tashkilotlari haqida qisqa ma'lumotlar</h3>
+        <h3>Yangiliklar</h3>
+        <hr>
+        <br>
+        <div class="section">
+            <div class="box">
+                <p class="new">21.11.2024 | Toshkent shahrining Yangihayot tumaniga yangi hokim tayinlandi, bu haqida shahar matbuot xizmati xabar berdi.</p>
+            </div>
+            <div class="box">
+                <p class="new">25.11.2024 | Sog'liqni saqlash tizimini raqamlashtirishning so'nggi bosqichi boshlandi.
+                </p>
+            </div>
+            <div class="box">
+                <p class="new">1.12.2024 | Toshkent viloyati Chirchiq shahar sudiga yangi sudya va o'rinbosarlari tayinlandi.</p>
+            </div>
+            <div class="box">
+                <p class="new">15.12.2024 | Samarqand viloyati Shirin tumanidan Samarqand shahriga bir qancha gektar hududlar o'tkazildi.</p>
+            </div>
+            <div class="box">
+                <p class="new">26.12.2024 | Buxoro viloyati Olot tumanidagi 19ta maktab rekonstruksiya qilinadi, bu bo'yicha Buxoro viloyati Xalq ta'lim vazirligi va Qurilish vazirligi qo'shma matbuot o'tkazdi.</p>
+            </div>
+            <div class="box">
+                <p class="new">29.12.2024 | O'zbekiston yirik gaz eksportyoridan, yirik gaz importyoriga aylandi, - Kun uz tahlilchilari</p>
+            </div>
+            <div class="box">
+                <p class="new">31.12.2024 | O'zbekiston Respublikasi Prezidenti o'zbek xalqini Yangi yil bilan tabrikladi, shu bilan birga barcha davlat tashkilotlari, organlarini bir qator ordenlar bilan mukofotladi.</p>
+            </div>
+            <div class="box">
+                <p class="new">2.1.2025 | O'zbek xalqi go'sht, kartoshka, tuxum, o'simlik yog'i va benzin narxlarini qimmatlashganidan xavotirda, - bu haqida Davlat statistika qo'mitasi e'lon qildi.</p>
+            </div>
+        </div>
+        <br>
+        <h3>Havolalar</h3>
         <hr>
         <br>
         <div class="base">
@@ -35,11 +65,7 @@
         </div>
         <div class="footer">
             <div class="left">
-                <p>"TOSHKENT METROPOLITENI" DUK</p>
-                <p>Toshkent sh, I.Karimov ko'chasi, 16a uy, 100027</p>
-                <p>Tel:+99871 241-65-14; e-mail: gup@tashmetro.uz</p>
-                <br><br><br><br><br>
-                <p>&copy; 2023 "Toshkent metropoliteni" DUK | Barcha Huquqlar Himoyalangan</p>
+                <p>&copy; 2025| Barcha Huquqlar Himoyalangan</p>
             </div>
             <div class="right">
                 <i class="fa fa-instagram"></i>
